fix footer overflow

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,12 +1,13 @@
-footer{
+footer {
   height: 60px;
   border-top: 1px solid #ccced2;
   display: flex;
   align-items: center;
+  background-color: #ffffff;
 
   p {
-    color: #bbbbbb;
+    color  : #bbbbbb;
     padding: 0 13%;
-    margin: 0;
+    margin : 0;
   }
 }
